--- a/_assets/scss/partials/layout/_expandable-section.scss
+++ b/_assets/scss/partials/layout/_expandable-section.scss
@@ -81,6 +81,7 @@
   // background-color: #ddd;
   // border: 1px solid $acolor;
   border-bottom: none;
+  // margin-top: 4rem;
 }
 
 .expander__question, .expander__answer {
