--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,9 @@
 		<!-- <script src="/assets/js/vendor/classie.js"></script>
 		<script src="/assets/js/vendor/nav.js"></script> -->
 
+		<script src="/assets/js/vendor/jquery-1.11.2.js"></script>
+
+
 		<!-- TYPEKIT -->
 		<script src="//use.typekit.net/gwl0zuj.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
