--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,6 +1,6 @@
 <div class="modal">
   <a href="#openModal">
-    <span class="modal-trigger">YES! I want MURDERBOOK!</span>
+    <span class="modal-trigger">YES! I want THE RED FILES!</span>
   </a>
 </div> <!-- end div modal -->
 <div class="nothanks">
@@ -13,7 +13,7 @@
 
     <img class="progbar" src="/assets/img/Animated_Progress_Bar.gif" alt="animated 50% complete progress bar">
     <h3 class="modalh2">the weekly digest of murder &hellip;</h3>
-    <h2 class="modalh3">MURDERBOOK</h2>
+    <h2 class="modalh3"><span style="color:darkred;">THE RED FILES</span></h2>
     <p class="modalp">And a <em>free</em> copy of <span>Planned by the Stars</span></p>
 
     <div class="emailbox">
