--- a/_assets/scss/partials/layout/_post.scss
+++ b/_assets/scss/partials/layout/_post.scss
@@ -3,15 +3,18 @@
    ========================================================================== */
 
 .post {
+	// background-color: blue;
+	// border: 1px solid blue;
 	// margin-top: 4rem;
 	margin: 2rem auto 0;
 	width: 100%;
+	// height: 100%;
 	max-width: 60rem;
 }
 
 .post__content {
 	background-color: #FFF;
-	max-width: 600px;
+	max-width: 37.5rem;
 	margin: 0 auto;
 	padding: 0 1rem;
 	// border-left: 1px solid $acolor;
@@ -31,7 +34,7 @@ blockquote {
 }
 
 .post__header {
-	// border: 2px solid green;
+	// background-color: green;
 	// font-family: $header-font-family;
 	margin: 0 auto 2rem auto;
 	max-width: 60rem;
@@ -56,7 +59,7 @@ blockquote {
 }
 
 .titles {
-	// border: 2px solid blue;
+	// background-color: blue;
 	text-align: right;
 	margin: 0 auto;
 	width: 100%;
@@ -99,20 +102,33 @@ blockquote {
 }
 
 .post__img {
-	// border: 2px solid orange;
+	// background-color: orange;
 	// width: 100%;
 	max-width: 320px;
 	height: auto;
 	// margin: 0 1rem 0.5rem 0;
 	margin: 0 auto;
 	@media screen and (min-width: 415px) {
-		padding-right: 1rem;
+		// padding-left: 1rem;
 		float: right;
 	}
 }
 
+.post__meta {
+	// background-color: red;
+	text-align: center;
+	margin-top: 1rem;
+	font-variant: small-caps;
+	text-transform: uppercase;
+	// font-size: 0.75rem;
+	color: lighten($pcolor, 25);
+	@media screen and (min-width: 415px) {
+		margin-top: 0;
+	}
+}
+
 .post__excerpt {
-	font-size: 2rem;
+	font-size: 1.25rem;
 	line-height: 1.25;
 	// text-align: center;
 	font-style: italic;
@@ -152,6 +168,135 @@ blockquote {
 .post__share {
 
 }
+
+
+.notreg { /* CHANGE FROM .premium_post  */
+	// background-color: hotpink;
+	@extend .post;
+	.post__content {
+		max-height: 2400px; /* determines TOTAL height before fade out */
+		position: relative;
+		overflow: hidden;		
+	}
+}
+
+.icon__standalone {
+	color: $acolor;
+	text-align: center;
+	margin: 0 auto;
+	margin-bottom: 0.5rem;
+}
+
+.post__content .read-more {
+	background: linear-gradient(to bottom, rgba(255,255,255,0), #fff);
+	position: absolute; 
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 700px;
+	text-align: center; 
+	margin: 0; 
+	padding: 30px 0 30px 0;
+}
+
+.box {
+	background-color: #fff;
+	border-top: 1px solid rgba(192,192,192,0.5);
+	border-left: 1px solid rgba(192,192,192,0.5);
+	box-shadow: 3px 3px 10px 2px rgba(192,192,192,0.5);
+	width: 500px;
+	max-width: 85%;
+	height: 400px;
+	margin: 1rem auto;
+	padding: 1rem;
+	@media screen and (min-width: 450px) {
+		height: 365px;
+	}
+	h3 {
+		color: $acolor;
+		margin-bottom: 0.25rem;
+	}
+	p {
+		text-align: left;
+		margin-top: 1rem;
+
+	}
+}
+
+.redfile {
+	color: $acolor;
+	text-transform: uppercase;
+}
+
+#read-more__cta {
+	color: $acolor;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+// #resize {
+// 	height: 2500px;
+// 	overflow: hidden;
+// 	// margin-bottom: 5rem;
+// }
+
+.pc-tease {
+	border: 1px solid #c2c2c2;
+	background-color: /*#F5FAA6 */ #f5f5f5;
+	max-width: 600px;
+	width: 90%;
+	padding: 1rem;
+	margin: 0 auto;
+	margin-bottom: 2rem;
+	h4 {
+		color: $acolor;
+		margin-bottom: 0.25rem;
+		text-align: center;
+	}
+	h5 {
+		text-align: center;
+		font-size: 0.75rem;
+	}
+	p {
+		margin-top: 1rem;
+		font-size: .85rem;
+	}
+	span {
+		color: $acolor;
+		text-transform: uppercase;
+	}
+}
+
+.read-more__list {
+	// background-color: hotpink;
+	text-align: left;
+	li i {
+		color: $acolor;
+	}
+	span {
+		color: $acolor;
+		// text-transform: uppercase;
+	}
+}
+
+.read-more__buttons {
+	margin-top: 2rem;
+}
+
+#register__button {
+
+}
+
+
+
+
+
+
+
+
+
+
 
 
 
