--- a/_assets/scss/partials/modules/_card.scss
+++ b/_assets/scss/partials/modules/_card.scss
@@ -37,7 +37,7 @@ $ribbon-size: 85px;
 	font-size: 16px;
 	font-size: 1rem;
 	vertical-align: top;
-	box-shadow: 5 5 5px crimson;
+	box-shadow: -4px 8px 8px silver;
 	@media screen and (min-width: 600px) {
 		width: 47.5%;
 		margin: 0 0 2.5% 2.5%;
@@ -45,7 +45,50 @@ $ribbon-size: 85px;
 	@media screen and (min-width: 960px) {
 		width: 30.83%;
 	}
+	&:hover {
+		border: 1px solid $acolor;
+		box-shadow: -4px 8px 8px transparentize($acolor, .8);
+		.card__meta {
+			// color: $acolor;
+			font-weight: bold;
+			background: $acolor;
+		}
+		.meta {
+			background-color: $acolor;
+			color: #fff;
+			font-weight: bold;
+		}
+		.readmore {
+			font-weight: bold;
+		}
+	}
 }
+
+// .effect2 {
+// 	position: relative;
+// }
+
+// .effect2:before, .effect2:after {
+// 	z-index: -1;
+// 	position: absolute;
+// 	content:"";
+// 	bottom: 5px;
+// 	left: 10px;
+// 	width: 50%;
+// 	top: 80%;
+// 	max-width: 80%;
+// 	background: #777;
+// 	box-shadow: 0 15px 10px #777;
+// 	transform: rotate(-3deg);
+
+// }
+
+// .effect2:after {
+// 	transform: rotate(3deg);
+// 	right: 10px;
+// 	left: auto;
+// }
+
 
 .card__header {
 	width:100%;
