--- a/_assets/scss/partials/utils/_utils.scss
+++ b/_assets/scss/partials/utils/_utils.scss
@@ -24,6 +24,14 @@
   padding: 0 1rem;
 }
 
+.italic {
+  font-style: italic;
+}
+
+.bold {
+  font-weight: bold;
+}
+
 .hangingindent {
   padding-left: 1.375rem;
   text-indent: -1.375rem;
