--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 	{% include masthead.html %}
 	{% include navigation.html %}
 
-  <main class="main" roll="main">
+  <main class="main" roll="main" style="height:100%;">
     <div class="content">
     	{{ content }}
     </div>
