--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -382,6 +382,395 @@ button, input[type="submit"] {
 .lbl-right .af-element label {
   text-align: right; }
 
+/* Get the bourbon mixin from http://bourbon.io */
+/* Reset */
+.flip-clock-wrapper * {
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box; }
+
+.flip-clock-wrapper a {
+  cursor: pointer;
+  text-decoration: none;
+  color: #ccc; }
+
+.flip-clock-wrapper a:hover {
+  color: #fff; }
+
+.flip-clock-wrapper ul {
+  list-style: none; }
+
+.flip-clock-wrapper.clearfix:before, .flip-clock-wrapper.clearfix:after {
+  content: " ";
+  display: table; }
+
+.flip-clock-wrapper.clearfix:after {
+  clear: both; }
+
+.flip-clock-wrapper.clearfix {
+  *zoom: 1; }
+
+/* Main */
+.flip-clock-wrapper {
+  min-height: 100%;
+  font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
+  -webkit-user-select: none; }
+
+.flip-clock-meridium {
+  background: none;
+  box-shadow: 0 0 0 !important;
+  font-size: 36px !important;
+  color: #313333;
+  bottom: 10px; }
+
+.flip-clock-wrapper {
+  text-align: center;
+  position: relative;
+  width: 100%;
+  margin: 1em; }
+
+/* Skeleton */
+.flip-clock-wrapper ul {
+  position: relative;
+  float: left;
+  margin: 5px;
+  width: 60px;
+  height: 90px;
+  font-size: 80px;
+  font-weight: bold;
+  line-height: 87px;
+  border-radius: 6px_prefixed;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); }
+
+.flip-clock-wrapper ul li {
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  line-height: 87px; }
+
+.flip-clock-wrapper ul li:first-child {
+  z-index: 2; }
+
+.flip-clock-wrapper ul li a {
+  display: block;
+  height: 100%;
+  -webkit-perspective: 200px;
+  -moz-perspective: 200px;
+  perspective: 200px;
+  margin: 0 !important;
+  overflow: visible !important; }
+
+.flip-clock-wrapper ul li a div {
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  overflow: hidden; }
+
+.flip-clock-wrapper ul li a div .shadow {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 2; }
+
+.flip-clock-wrapper ul li a div.up {
+  -webkit-transform-origin: 50% 100%;
+  -moz-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  -o-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
+  top: 0; }
+
+.flip-clock-wrapper ul li a div.up:after {
+  content: "";
+  position: absolute;
+  top: 44px;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 3px;
+  background-color: #000;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+.flip-clock-wrapper ul li a div.down {
+  -webkit-transform-origin: 50% 0;
+  -moz-transform-origin: 50% 0;
+  -ms-transform-origin: 50% 0;
+  -o-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+  bottom: 0; }
+
+.flip-clock-wrapper ul li a div div.inn {
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 200%;
+  color: #ccc;
+  text-shadow: 0 1px 2px #000;
+  text-align: center;
+  background-color: #333;
+  border-radius: 6px;
+  font-size: 70px; }
+
+.flip-clock-wrapper ul li a div.up div.inn {
+  top: 0; }
+
+.flip-clock-wrapper ul li a div.down div.inn {
+  bottom: 0; }
+
+/* PLAY */
+.flip-clock-wrapper ul.play li.flip-clock-before {
+  z-index: 3; }
+
+.flip-clock-wrapper ul.play li.flip-clock-active {
+  -webkit-animation: asd 0.5s 0.5s linear both;
+  -moz-animation: asd 0.5s 0.5s linear both;
+  animation: asd 0.5s 0.5s linear both;
+  z-index: 2; }
+
+.flip-clock-divider {
+  float: left;
+  display: inline-block;
+  position: relative;
+  width: 20px;
+  height: 100px; }
+
+.flip-clock-divider:first-child {
+  width: 0; }
+
+.flip-clock-dot {
+  display: block;
+  background: #323434;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  border-radius: 50%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5); }
+
+.flip-clock-divider .flip-clock-label {
+  position: absolute;
+  top: -1.5em;
+  right: -86px;
+  color: black;
+  text-shadow: none; }
+
+.flip-clock-divider.minutes .flip-clock-label {
+  right: -88px; }
+
+.flip-clock-divider.seconds .flip-clock-label {
+  right: -91px; }
+
+.flip-clock-dot.top {
+  top: 30px; }
+
+.flip-clock-dot.bottom {
+  bottom: 30px; }
+
+@-webkit-keyframes asd {
+  0% {
+    z-index: 2; }
+
+  20% {
+    z-index: 4; }
+
+  100% {
+    z-index: 4; } }
+
+@-moz-keyframes asd {
+  0% {
+    z-index: 2; }
+
+  20% {
+    z-index: 4; }
+
+  100% {
+    z-index: 4; } }
+
+@keyframes asd {
+  0% {
+    z-index: 2; }
+
+  20% {
+    z-index: 4; }
+
+  100% {
+    z-index: 4; } }
+
+.flip-clock-wrapper ul.play li.flip-clock-active .down {
+  z-index: 2;
+  -webkit-animation: turn 0.5s 0.5s linear both;
+  -moz-animation: turn 0.5s 0.5s linear both;
+  animation: turn 0.5s 0.5s linear both; }
+
+@-webkit-keyframes turn {
+  0% {
+    -webkit-transform: rotateX(90deg); }
+
+  100% {
+    -webkit-transform: rotateX(0deg); } }
+
+@-moz-keyframes turn {
+  0% {
+    -moz-transform: rotateX(90deg); }
+
+  100% {
+    -moz-transform: rotateX(0deg); } }
+
+@keyframes turn {
+  0% {
+    -webkit-transform: rotateX(90deg);
+    -moz-transform: rotateX(90deg);
+    -ms-transform: rotateX(90deg);
+    -o-transform: rotateX(90deg);
+    transform: rotateX(90deg); }
+
+  100% {
+    -webkit-transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
+    transform: rotateX(0deg); } }
+
+.flip-clock-wrapper ul.play li.flip-clock-before .up {
+  z-index: 2;
+  -webkit-animation: turn2 0.5s linear both;
+  -moz-animation: turn2 0.5s linear both;
+  animation: turn2 0.5s linear both; }
+
+@-webkit-keyframes turn2 {
+  0% {
+    -webkit-transform: rotateX(0deg); }
+
+  100% {
+    -webkit-transform: rotateX(-90deg); } }
+
+@-moz-keyframes turn2 {
+  0% {
+    -moz-transform: rotateX(0deg); }
+
+  100% {
+    -moz-transform: rotateX(-90deg); } }
+
+@keyframes turn2 {
+  0% {
+    -webkit-transform: rotateX(0deg);
+    -moz-transform: rotateX(0deg);
+    -ms-transform: rotateX(0deg);
+    -o-transform: rotateX(0deg);
+    transform: rotateX(0deg); }
+
+  100% {
+    -webkit-transform: rotateX(-90deg);
+    -moz-transform: rotateX(-90deg);
+    -ms-transform: rotateX(-90deg);
+    -o-transform: rotateX(-90deg);
+    transform: rotateX(-90deg); } }
+
+.flip-clock-wrapper ul li.flip-clock-active {
+  z-index: 3; }
+
+/* SHADOW */
+.flip-clock-wrapper ul.play li.flip-clock-before .up .shadow {
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, #000000));
+  background: linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  -webkit-animation: show 0.5s linear both;
+  -moz-animation: show 0.5s linear both;
+  animation: show 0.5s linear both; }
+
+.flip-clock-wrapper ul.play li.flip-clock-active .up .shadow {
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.1)), color-stop(100%, #000000));
+  background: linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 0%, #000000 100%);
+  -webkit-animation: hide 0.5s 0.3s linear both;
+  -moz-animation: hide 0.5s 0.3s linear both;
+  animation: hide 0.5s 0.3s linear both; }
+
+/*DOWN*/
+.flip-clock-wrapper ul.play li.flip-clock-before .down .shadow {
+  background: -moz-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #000000), color-stop(100%, rgba(0, 0, 0, 0.1)));
+  background: linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: -o-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: -ms-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  -webkit-animation: show 0.5s linear both;
+  -moz-animation: show 0.5s linear both;
+  animation: show 0.5s linear both; }
+
+.flip-clock-wrapper ul.play li.flip-clock-active .down .shadow {
+  background: -moz-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #000000), color-stop(100%, rgba(0, 0, 0, 0.1)));
+  background: linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: -o-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: -ms-linear-gradient(top, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.1) 100%);
+  -webkit-animation: hide 0.5s 0.3s linear both;
+  -moz-animation: hide 0.5s 0.3s linear both;
+  animation: hide 0.5s 0.3s linear both; }
+
+@-webkit-keyframes show {
+  0% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+
+@-moz-keyframes show {
+  0% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+
+@keyframes show {
+  0% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+
+@-webkit-keyframes hide {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+@-moz-keyframes hide {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+@keyframes hide {
+  0% {
+    opacity: 1; }
+
+  100% {
+    opacity: 0; } }
+
+/* */
+.clock {
+  margin: 0 auto;
+  text-align: center;
+  background-color: orange; }
+
 /*==========  BASE  ==========*/
 /* ==========================================================================
    GLOBAL RESET USING NORMALIZE ... downloaded 12.17.14
@@ -721,16 +1110,16 @@ td, th {
   margin: 0;
   padding: 0;
   outline: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box !important; }
 
 *:before, *:after {
-  box-sizing: border-box; }
+  box-sizing: inherit; }
 
 @-ms-viewport {
   width: device-width; }
 
 html {
-  box-sizing: border-box;
+  box-sizing: border-box !important;
   background-color: #242424; }
 
 body, caption, th, td, input, textarea, select, option, legend, fieldset, h1, .manifesto h2, .policies h2, .terms h2, .contact h2, h2, h3, h4, h5, h6 {
@@ -1091,7 +1480,7 @@ dl {
   font-size: 16px;
   font-size: 1rem;
   vertical-align: top;
-  box-shadow: 5 5 5px crimson; }
+  box-shadow: -4px 8px 8px silver; }
   @media screen and (min-width: 600px) {
     .card {
       width: 47.5%;
@@ -1099,6 +1488,18 @@ dl {
   @media screen and (min-width: 960px) {
     .card {
       width: 30.83%; } }
+  .card:hover {
+    border: 1px solid #8B0000;
+    box-shadow: -4px 8px 8px rgba(139, 0, 0, 0.2); }
+    .card:hover .card__meta {
+      font-weight: bold;
+      background: #8B0000; }
+    .card:hover .meta {
+      background-color: #8B0000;
+      color: #fff;
+      font-weight: bold; }
+    .card:hover .readmore {
+      font-weight: bold; }
 
 .card__header {
   width: 100%;
@@ -1632,6 +2033,54 @@ span.data-title:after {
 .checknow {
   margin: 2rem; }
 
+.fade-in-element {
+  line-height: 1.4;
+  background: white;
+  border-radius: 3px;
+  border: 1px solid silver;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  margin-bottom: 4em;
+  padding: 1.5em;
+  text-align: center;
+  width: 100%; }
+  .fade-in-element p {
+    color: #333;
+    line-height: 1.4; }
+  .fade-in-element:after {
+    content: "";
+    display: table;
+    clear: both; }
+
+.js-fade-element-hide {
+  opacity: 0; }
+
+.js-fade-element-show {
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  opacity: 1; }
+
+/* ==========================================================================
+   POST STYLE
+   ========================================================================== */
+#panel {
+  display: none;
+  border-top: 1px solid rgba(192, 192, 192, 0.5);
+  border-left: 1px solid rgba(192, 192, 192, 0.5);
+  box-shadow: 3px 3px 10px 2px rgba(139, 0, 0, 0.25);
+  background-color: #FFF;
+  margin: 2.5rem 0;
+  height: 235px; }
+  #panel .previewLabel {
+    margin: 1rem; }
+
+.registerUser {
+  margin: 1rem;
+  display: hidden; }
+
+#af-submit-image-2123962128 {
+  text-transform: uppercase; }
+
 /*==========  LAYOUT  ==========*/
 /* ==========================================================================
    HEADER .. full width of browser window
@@ -2040,14 +2489,14 @@ blockquote {
 /* ==========================================================================
    POST STYLE
    ========================================================================== */
-.post {
+.post, .notreg {
   margin: 2rem auto 0;
   width: 100%;
   max-width: 60rem; }
 
 .post__content {
   background-color: #FFF;
-  max-width: 600px;
+  max-width: 37.5rem;
   margin: 0 auto;
   padding: 0 1rem; }
 
@@ -2109,11 +2558,20 @@ blockquote {
   margin: 0 auto; }
   @media screen and (min-width: 415px) {
     .post__img {
-      padding-right: 1rem;
       float: right; } }
 
+.post__meta {
+  text-align: center;
+  margin-top: 1rem;
+  font-variant: small-caps;
+  text-transform: uppercase;
+  color: #848f98; }
+  @media screen and (min-width: 415px) {
+    .post__meta {
+      margin-top: 0; } }
+
 .post__excerpt {
-  font-size: 2rem;
+  font-size: 1.25rem;
   line-height: 1.25;
   font-style: italic; }
 
@@ -2137,6 +2595,93 @@ blockquote {
 
 .post__download {
   margin: 2rem 0; }
+
+.notreg {
+  /* CHANGE FROM .premium_post  */ }
+  .notreg .post__content {
+    max-height: 2400px;
+    /* determines TOTAL height before fade out */
+    position: relative;
+    overflow: hidden; }
+
+.icon__standalone {
+  color: #8B0000;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 0.5rem; }
+
+.post__content .read-more {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), #fff);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 700px;
+  text-align: center;
+  margin: 0;
+  padding: 30px 0 30px 0; }
+
+.box {
+  background-color: #fff;
+  border-top: 1px solid rgba(192, 192, 192, 0.5);
+  border-left: 1px solid rgba(192, 192, 192, 0.5);
+  box-shadow: 3px 3px 10px 2px rgba(192, 192, 192, 0.5);
+  width: 500px;
+  max-width: 85%;
+  height: 400px;
+  margin: 1rem auto;
+  padding: 1rem; }
+  @media screen and (min-width: 450px) {
+    .box {
+      height: 365px; } }
+  .box h3 {
+    color: #8B0000;
+    margin-bottom: 0.25rem; }
+  .box p {
+    text-align: left;
+    margin-top: 1rem; }
+
+.redfile {
+  color: #8B0000;
+  text-transform: uppercase; }
+
+#read-more__cta {
+  color: #8B0000;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold; }
+
+.pc-tease {
+  border: 1px solid #c2c2c2;
+  background-color: #f5f5f5;
+  max-width: 600px;
+  width: 90%;
+  padding: 1rem;
+  margin: 0 auto;
+  margin-bottom: 2rem; }
+  .pc-tease h4 {
+    color: #8B0000;
+    margin-bottom: 0.25rem;
+    text-align: center; }
+  .pc-tease h5 {
+    text-align: center;
+    font-size: 0.75rem; }
+  .pc-tease p {
+    margin-top: 1rem;
+    font-size: 0.85rem; }
+  .pc-tease span {
+    color: #8B0000;
+    text-transform: uppercase; }
+
+.read-more__list {
+  text-align: left; }
+  .read-more__list li i {
+    color: #8B0000; }
+  .read-more__list span {
+    color: #8B0000; }
+
+.read-more__buttons {
+  margin-top: 2rem; }
 
 .herounit {
   background-color: #8B0000;
@@ -2511,6 +3056,12 @@ blockquote {
   width: 100%;
   margin: 0 auto;
   padding: 0 1rem; }
+
+.italic {
+  font-style: italic; }
+
+.bold {
+  font-weight: bold; }
 
 .hangingindent {
   padding-left: 1.375rem;
