fixed redfile thank you page

--- a/_assets/scss/partials/base/_variables.scss
+++ b/_assets/scss/partials/base/_variables.scss
@@ -34,8 +34,8 @@ $pcolor: #474F55;
 $acolor: #8B0000; /* darkred */
 $paper: #fffdf7;
 $smallprint: darken($paper, 55%);
-
-
+$base-button-color: #00a968;
+$hover-button-color: #1ec279;
 
 
 
