--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,4 @@
-<section class="contact container">
+<section class="contact container" id="contactform">
 	
 	<div class="contact__header">
 		<h2><i class="fa fa-bullhorn"></i>&nbsp;&#39;ey! You <wbr>talkin&#39;&nbsp;to&nbsp;me?!</h2>
