--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -6,9 +6,10 @@
 		<div class="masthead">
 			<div class="branding clearfix">
 				<a href="/">
-					<img class="logo" src="/assets/img/circle_crow_white.png" alt="Tales of Murder logo">
+					<img src="/assets/img/logo2.png" alt="" class="logo">
+					<!-- <img class="logo" src="/assets/img/circle_crow_white.png" alt="Tales of Murder logo">
 					<h2 class="title">Tales of <span>Murder</span></h2>
-					<h3 class="tagline">for readers with <span>time to <em>kill</em>!</span></h3>
+					<h3 class="tagline">for readers with <span>time to <em>kill</em>!</span></h3> -->
 				</a>
 			</div>
 
