--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,7 +8,8 @@
         <a {% if page.url == '/index.html' %} class="active" {% endif %} href="/index.html">Home</a>
         <a {% if page.url == '/about/index.html' %} class="active" {% endif %} href="/about/index.html">About</a>
         <a {% if page.url == '/short-stories/index.html' %} class="active" {% endif %} href="/short-stories/index.html">The&nbsp;Blotter</a>
-        <a {% if page.url == '/book-catalog/index.html' %} class="active" {% endif %} href="/book-catalog/index.html" style="color:darkred; font-weight:bold;">THE&nbsp;RED&nbspFILE</a>
+        <a {% if page.url == '/book-catalog/index.html' %} class="active" {% endif %} href="/book-catalog/index.html">Book&nbsp;Catalog</a>
+        <a {% if page.url == '/red-file/index.html' %} class="active" {% endif %} href="/red-file/index.html" style="color:darkred; font-weight:bold;">THE&nbsp;RED&nbspFILE</a>
         <!-- <a {% if page.url == '/murderbook/index.html' %} class="active" {% endif %} href="/murderbook/index.html">MurderBook</a> -->
       </div> 
     </nav> <!-- nav__primary -->
