--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -153,7 +153,8 @@ $(document).ready(function(){
 </script>
 
 <!-- CHECK LOCAL STORAGE -->
-<script>
+<!-- can I name this function/script?? -->
+<script> 
 	
 	$(document).ready(function() {
 		if ($("#thepost").hasClass("premium_post")) {
