--- a/_assets/scss/partials/layout/_masthead.scss
+++ b/_assets/scss/partials/layout/_masthead.scss
@@ -18,7 +18,12 @@
 
 .branding {
 	// border: 1px solid green;
-	width: 330px;
+	width: 200px;
+	float: left;
+	@media screen and (min-width: 350px) {
+		float: none;
+		margin: 0 auto;
+	}
 }
 
 // .logo_title {
@@ -28,11 +33,12 @@
 // }
 
 .logo {
-	float: left;
-	margin: 0.55rem 1rem 0 0;
-	width: 50px;
+	// border: 1px solid orange;
+	margin: 0.55rem 0 0 0;
+	width: 200px;
 	@media screen and (min-width: 350px) {
-		width: 50px;
+		width: 200px;
+		margin: 0.55rem auto;
 	}
 }
 
