--- a/_assets/scss/partials/utils/_utils.scss
+++ b/_assets/scss/partials/utils/_utils.scss
@@ -43,10 +43,30 @@
 }
 
 .specialnote {
+  // background-color: silver;
+  // background-color: lightgrey;
+  // border: 1px dotted darkgrey;
+  color: #000;
   font-style: italic;
+  font-size: 1.25rem;
+  text-align: right;
+  // line-height: 2;
   max-width: 85%;
-  margin: 0 auto;
+  margin: 2rem auto 0 auto;
+  padding: 3rem;
+//   background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 24%, rgba(0,0,0,0.65) 41%, rgba(0,0,0,0.41) 62%, rgba(0,0,0,0.25) 76%, rgba(0,0,0,0.1) 89%, rgba(0,0,0,0) 97%); /* FF3.6+ */
+//   background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(24%,rgba(0,0,0,0.65)), color-stop(41%,rgba(0,0,0,0.65)), color-stop(62%,rgba(0,0,0,0.41)), color-stop(76%,rgba(0,0,0,0.25)), color-stop(89%,rgba(0,0,0,0.1)), color-stop(97%,rgba(0,0,0,0))); /* Chrome,Safari4+ */
+//   background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 24%,rgba(0,0,0,0.65) 41%,rgba(0,0,0,0.41) 62%,rgba(0,0,0,0.25) 76%,rgba(0,0,0,0.1) 89%,rgba(0,0,0,0) 97%); /* Chrome10+,Safari5.1+ */
+//   background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 24%,rgba(0,0,0,0.65) 41%,rgba(0,0,0,0.41) 62%,rgba(0,0,0,0.25) 76%,rgba(0,0,0,0.1) 89%,rgba(0,0,0,0) 97%); /* Opera 12+ */
+//   background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 24%,rgba(0,0,0,0.65) 41%,rgba(0,0,0,0.41) 62%,rgba(0,0,0,0.25) 76%,rgba(0,0,0,0.1) 89%,rgba(0,0,0,0) 97%); /* IE10+ */
+//   background: radial-gradient(ellipse at center,  rgba(0,0,0,0.65) 24%,rgba(0,0,0,0.65) 41%,rgba(0,0,0,0.41) 62%,rgba(0,0,0,0.25) 76%,rgba(0,0,0,0.1) 89%,rgba(0,0,0,0) 97%); /* W3C */
+//   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
+
+
+
+
+
 
 .progbar {
   margin-top: 1rem;
