--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -26,6 +26,7 @@
 // @import 'partials/modules/modules';
 @import 'partials/modules/slabtext';
 @import 'partials/modules/modal';
+@import 'partials/modules/wgform';
 @import 'partials/modules/card';
 @import 'partials/modules/contentupgrade';
 // @import 'partials/modules/socialmediasharing';
