--- a/_assets/scss/partials/modules/_wgform.scss
+++ b/_assets/scss/partials/modules/_wgform.scss
@@ -2,11 +2,13 @@
    WELCOME GATE FORM STYLES
    ========================================================================== */
 
-.wg_signupform {
+#mc_embed_signup {
 	label {
 		color: #fff;
-		padding-top: 1rem;
+		margin-bottom: 1rem;
+		// padding-top: 0.5rem;
 		text-align: left;
+		font-size: 1.1rem;
 	}
 
 	.button:link, .button:active, .button:visited, .button, .button span {
@@ -18,6 +20,13 @@
 		background-color: #00a968 !important;
 		color: #fff !important;
 	}
-
 }
 
+.mc-field-group {
+	input[value] {
+		font-size: 0.8rem;
+		color: grey;
+		text-align: center;
+		font-style: italic;
+	}
+}
