--- a/_assets/scss/partials/modules/_panel.scss
+++ b/_assets/scss/partials/modules/_panel.scss
@@ -11,7 +11,7 @@
 	box-shadow: 3px 3px 10px 2px rgba(139,0,0,0.25);
 	background-color: #FFF;
 	margin: 2.5rem 0;
-	height: 235px;
+	height: 250px;
 	.previewLabel {
 		margin: 1rem;
 	}
@@ -22,6 +22,6 @@
 	display: hidden;
 }
 
-#af-submit-image-2123962128 {
-	text-transform: uppercase;
-}
+// #af-submit-image-2123962128 {
+// 	text-transform: uppercase;
+// }
