--- a/_assets/scss/styles.scss
+++ b/_assets/scss/styles.scss
@@ -43,6 +43,8 @@
 @import 'partials/modules/fadein';
 @import 'partials/modules/userreg';
 @import 'partials/modules/panel';
+@import 'partials/modules/animated_progbar';
+@import 'partials/modules/premium-content';
 
 
 /*==========  LAYOUT  ==========*/
