--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -4,20 +4,19 @@
   </a>
 </div> <!-- end div modal -->
 <div class="nothanks">
-  <a href="{{ site.url }}/short-stories" class="nothanks">No thanks. <wbr>I just want to read online, with not perks.</a>
+  <a href="{{ site.url }}/short-stories" class="nothanks">No thanks. <wbr>I just want to read online, without the perks.</a>
 </div>
 
 <div id="openModal" class="modalDialog">
   <div class="modal-inner">
     <a href="#close" title="Close" class="close">X</a>
 
-    <img class="progbar" src="/assets/img/Animated_Progress_Bar.gif" alt="animated 50% complete progress bar">
     <h3 class="modalh2">the weekly digest of murder &hellip;</h3>
     <h2 class="modalh3"><span style="color:darkred;">THE RED FILES</span></h2>
     <p class="modalp">And a <em>free</em> copy of <span>Planned by the Stars</span></p>
 
     <div class="emailbox">
-      {% include MC_form2.html %}
+      {% include MC_form3.html %}
       <p class="small"><br><i class="fa fa-lock"></i>&nbsp;Your email is securely locked away from prying eyes.<br>I NEVER sell out your <a href="{{ site.url }}/about/#policies" style="color:#fff;text-decoration:underline;">privacy</a>.</p>
       <p class="small"><em>For entertainment purposes only.</em></p>
     </div> <!-- end div emailbox -->
