--- a/_includes/readmore.html
+++ b/_includes/readmore.html
@@ -27,24 +27,23 @@
 		
 		<div id="panel">
 
-			<!-- include premium-form.html -->
-			
-			<form name="regForm" id="regForm" class="registerUser" action="#">
+			{% include premium_form.html %}
+
+			<!-- <form name="regForm" id="regForm" class="registerUser" action="#">
 
 				<input type="hidden" id="storyId" name="storyId" value="{{ page.storyId }}">
 				
 				<label for="regEmail">Step 1: Enter you email</label>
-				<input id="regEmail pr__email" type="email" name="email">
+				<input id="regEmail" type="email" name="email">
 				
 				<label for="regSubmit">Step 2: Submit</label>
 				<input id="regSubmit" type="submit" value="Register Me!">
 				
 				<p style="text-align:center;"><em>Yep&hellip;that's it!</em></p>
 
-			</form>
-
+			</form> -->
+						
 		</div> <!-- end div panel -->
-
 
 	</div> <!-- end div box -->
 </div> <!-- end div read-more -->
