--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,41 +32,14 @@
 
 		<script src="/assets/js/vendor/jquery-1.11.2.js"></script>
 
+		<script src="/assets/js/vendor/store.js"></script>
+
 
 		<!-- TYPEKIT -->
 		<script src="//use.typekit.net/gwl0zuj.js"></script>
 		<script>try{Typekit.load();}catch(e){}</script>
 
 		<!-- Icons [http://tinyurl.com/nf7m64p] -->
-
-		<!-- AWEBER DISPLAY SUBSCRIBER INFO -->
-
-		<script type="text/javascript">
-			var formData = function() {  var query_string = (location.search) ? ((location.search.indexOf('#') != -1) ? location.search.substring(1, location.search.indexOf('#')) : location.search.substring(1)) : '';  
-			var elements = [];  
-			if(query_string) {     
-				var pairs = query_string.split("&");     
-				for(i in pairs) {     
-					if (typeof pairs[i] == 'string') {           
-						var tmp = pairs[i].split("=");           
-						var queryKey = unescape(tmp[0]);           
-						queryKey = (queryKey.charAt(0) == 'c') ? queryKey.replace(/\s/g, "_") : queryKey;   
-						elements[queryKey] = unescape(tmp[1]);      
-					}    
-				} 
-			}  
-			return {     
-				display: function(key) {         
-					if(elements[key]) {           
-						document.write(elements[key]);         
-					} 
-					else {         
-						document.write("Error: Data not pulled!");          
-					}     
-				}   
-			} 
-		}
-		(); </script>
 
 	</head>
 
