--- a/_includes/ss-form2.html
+++ b/_includes/ss-form2.html
@@ -9,15 +9,13 @@
 		<div id="mc_embed_signup_scroll">
 
 			<div class="mc-field-group">
-				<label for="mce-EMAIL" class="form__label">STEP 1&#058; Who's asking?</label>
+				<label for="mce-EMAIL">Where you want it sent?</label>
 				<input type="email" value="" placeholder="your best email address" name="EMAIL" class="required email" id="mce-EMAIL">
 			</div> <!-- end div mc-field-group ... Email Address -->
 
-			<input type="hidden" value="The Red File" name="TITLE"> <!-- segment title -->
+			<input id="title" type="hidden" value="{{ page.genre }}" name="TITLE"> <!-- segment title -->
 
 			<input type="hidden" value="true" name="RFFREE"> <!-- SEGMENT The Red File (Free) -->
-
-			<input type="hidden" value="harboiled" name="GENRE"> <!-- Genre selection -->
 
 			<div id="mce-responses" class="clear">
 				<div class="response" id="mce-error-response" style="display:none"></div>
@@ -27,8 +25,8 @@
 			<div style="position: absolute; left: -5000px;"><input type="text" name="b_311e39626c77f842128106e92_1c26afbfe4" tabindex="-1" value=""></div>
 
 			<div class="clear">
-				<label for="mc-embedded-subscribe" class="form__label">STEP 2&#058; Verify your application &hellip;</label>
-				<input type="submit" value="YES! Grant me access!" name="subscribe" id="mc-embedded-subscribe" class="button">
+				<!-- <label for="mc-embedded-subscribe">STEP 2&#058; Verify your application &hellip;</label> -->
+				<input type="submit" value="Gimme my story!" name="subscribe" id="mc-embedded-subscribe" class="button">
 			</div>
 			
 		</div> <!-- end div mc_embed_signup_scroll -->
@@ -37,6 +35,6 @@
 
 </div> <!-- end div mc_embed_signup -->
 
-<!-- <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='TITLE';ftypes[3]='text';fnames[4]='RFFREE';ftypes[4]='text';fnames[5]='NOIR';ftypes[5]='text';fnames[6]='HARDBOILED';ftypes[6]='text';fnames[7]='COZY';ftypes[7]='text';fnames[8]='GLDNAGE';ftypes[8]='text';fnames[9]='AMSLEUTH';ftypes[9]='text';fnames[10]='PROSLEUTH';ftypes[10]='text';fnames[11]='POPROC';ftypes[11]='text';fnames[12]='PARANORMAL';ftypes[12]='text';fnames[13]='MED';ftypes[13]='text';fnames[14]='LEGAL';ftypes[14]='text';fnames[15]='CAPER';ftypes[15]='text';fnames[16]='LOCKEDRM';ftypes[16]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='TITLE';ftypes[3]='text';fnames[4]='RFFREE';ftypes[4]='text';fnames[5]='NOIR';ftypes[5]='text';fnames[6]='HARDBOILED';ftypes[6]='text';fnames[7]='COZY';ftypes[7]='text';fnames[8]='GLDNAGE';ftypes[8]='text';fnames[9]='AMSLEUTH';ftypes[9]='text';fnames[10]='PROSLEUTH';ftypes[10]='text';fnames[11]='POPROC';ftypes[11]='text';fnames[12]='PARANORMAL';ftypes[12]='text';fnames[13]='MED';ftypes[13]='text';fnames[14]='LEGAL';ftypes[14]='text';fnames[15]='CAPER';ftypes[15]='text';fnames[16]='LOCKEDRM';ftypes[16]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 
 <!-- End mc_embed_signup -->
